@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: © 2020 Matt Williams <matt@milliams.com>
+# SPDX-License-Identifier: CC0-1.0
+
 [flake8]
 max-line-length = 120
 ignore = E203,W503
