@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: © 2020 Matt Williams <matt@milliams.com>
+# SPDX-License-Identifier: CC0-1.0
+
 [mypy]
 check_untyped_defs = True
 no_implicit_optional = True
