@@ -1,3 +1,8 @@
+<!---
+SPDX-FileCopyrightText: © 2020 Matt Williams <matt@milliams.com>
+SPDX-License-Identifier: MIT
+-->
+
 # Changelog
 
 ## Unreleased
